# stvid

./: acquire.py  camera_info.py  imgstat.py  keogram.py  process.py  pyproject.toml  skyplots.py  update_tle.py
notebooks/: EarthShadow.ipynb
stvid/: astrometry.py  calibration.py  camera.py  config.py  external.py  fourframe.py  satellite.py  stio.py
tests/: test_camera.py
